--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,7 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
+<head>
+  <meta charset="UTF-8">
+  <meta name="description" content="jsx is jobscale of jsx.jp">
+  <meta name="keywords" content="jsx, kubernetes, docker, HTML, CSS, JavaScript">
+  <meta name="author" content="jobscale <jobscale@users.noreply.github.com>">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="dark" name="color-scheme">
+  <meta name="theme-color" content="black">
     <title><%= blog.title %></title>
     <link rel="stylesheet" href="//cdn.bootcss.com/semantic-ui/2.1.8/semantic.min.css">
     <link rel="stylesheet" href="/css/style.css">
