--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,17 @@
 /* ---------- 全局样式 ---------- */
 
+:root {
+  font-size: 2vw;
+}
+
+html {
+  font-size: 2vw;
+}
+
+body {
+  font-size: 2vw;
+}
+
 body {
   width: 1100px;
   height: 100%;
