cdn.bootcss.com is slow so he's fired

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,10 +9,10 @@
   <meta content="dark" name="color-scheme">
   <meta name="theme-color" content="black">
     <title><%= blog.title %></title>
-    <link rel="stylesheet" href="//cdn.bootcss.com/semantic-ui/2.1.8/semantic.min.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.css">
     <link rel="stylesheet" href="/css/style.css">
-    <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-    <script src="//cdn.bootcss.com/semantic-ui/2.1.8/semantic.min.js"></script>
+    <script src="//code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
   </head>
   <body>
   <%- include('components/nav') %>
